src/test/deca/codegen/valid/created/testClass/BasicInstanceOf.ass
	TSTO #13
	BOV stack_overflow_error
	ADDSP #26
; Code de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.object.equals, R0
	STORE R0, 2(GB)
; code de la table des méthodes de A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.object.equals, R0
	STORE R0, 4(GB)
; code de la table des méthodes de B
	LEA 3(GB), R0
	STORE R0, 5(GB)
	LOAD code.object.equals, R0
	STORE R0, 6(GB)
; code de la table des méthodes de C
	LEA 5(GB), R0
	STORE R0, 7(GB)
	LOAD code.object.equals, R0
	STORE R0, 8(GB)
; start main program
; Main program
; Beginning of main instructions:
	LOAD #null, R0
	STORE R0, 9(GB)
	LOAD #null, R0
	STORE R0, 10(GB)
	NEW #1, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 9(GB)
	LOAD #1, R2
	CMP #1, R2
	BNE else2
then2:
	WSTR "ok"
	WNL
	BRA end_If2
else2:
end_If2:
	HALT
; end main program
overflow_error:
	WSTR "Error: Overflow during arithmetic operation"
	WNL
	ERROR
stack_overflow_error:
	WSTR "Error: Stack Overflow "
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
Dereferencement.null:
	WSTR "Erreur : dereferencement de null"
	WNL
	ERROR
pile_pleine:
	WSTR "Erreur : pile pleine"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
cast_incorrect:
	WSTR "la conversion (cast) est incorrecte"
	WNL
	ERROR
; code de l'initialisation des champs
init.A:
	RTS
init.B:
	LOAD -2(LB), R1
	PUSH R1
	BSR init.A
	SUBSP #1
	RTS
init.C:
	LOAD -2(LB), R1
	PUSH R1
	BSR init.B
	SUBSP #1
	RTS
; code des méthodes
code.object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ if_equal_pour_object.equals
	LOAD #0, R0
	BRA fin_methodes
if_equal_pour_object.equals:
	LOAD #1, R0
	BRA fin_methodes
fin_methodes:
	RTS
